--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/app.ts",
+    "start": "npx ts-node src/app.ts",
+    "dev": "nodemon src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,8 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.9.1",
-    "nodemailer": "^6.9.9",
-    "nodemon": "^3.0.3"
+    "nodemailer": "^6.9.9"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -34,6 +34,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.16",
     "@types/nodemailer": "^6.4.14",
+    "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
