--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx ts-node src/app.ts",
+    "start": "node dist/app.ts",
     "dev": "nodemon src/app.ts",
+    "build": "tsc -p .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,9 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.9.1",
-    "nodemailer": "^6.9.9",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "nodemailer": "^6.9.9"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -36,6 +35,8 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.16",
     "@types/nodemailer": "^6.4.14",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
